Refactor ImageMetadata using stream